moving search to partials folder and creating html main

--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -107,6 +107,7 @@
             margin-right: 2rem;
         }
 
+        /*Search*/
         .search-form {
             border: 0.2rem solid var(--color-primary-dark);
             max-width: 64rem;
@@ -149,6 +150,19 @@
             outline: 0.1rem solid var(--color-primary);
             background: rgba(0, 0, 0, 0.05)
         }
+
+        /*Main*/
+        .main-content {
+            padding-top: 0;
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(34rem, 1fr));
+            gap: var(--spacing-gutter-large);
+        }
+
+
 
     </style>
 
