--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -162,7 +162,26 @@
             gap: var(--spacing-gutter-large);
         }
 
+        /*Recipe*/
 
+        .recipe {
+            background: var(--color-white);
+            box-shadow: -0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+            transform: scale(1);
+            transition: all  300ms ease-in-out;
+        }
+
+        .recipe img {
+            max-width: 100%;
+        }
+
+        .recipe-list-item {
+            max-width: 64rem;
+        }
+
+        .recipe-list-item:hover {
+            transform: scale(1.02);
+        }
 
     </style>
 
