--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -75,6 +75,7 @@
             font-size: 1.6rem;
             font-family: var(--font-primary);
             background: var(--color-gray-1);
+            color: var(--color-dark-text);
         }
 
         h1, h2, h3, h4, h5, h6 {
@@ -163,12 +164,13 @@
         }
 
         /*Recipe*/
-
         .recipe {
             background: var(--color-white);
             box-shadow: -0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
             transform: scale(1);
             transition: all  300ms ease-in-out;
+            border-radius: 0.5rem;
+            overflow: hidden;
         }
 
         .recipe img {
@@ -181,6 +183,71 @@
 
         .recipe-list-item:hover {
             transform: scale(1.02);
+            box-shadow: -1rem 1rem 2rem rgba(0, 0, 0, 0.6);
+        }
+
+        .recipe-title-container {
+            padding: var(--spacing-gutter-medium);
+            padding-bottom: 2rem;
+        }
+
+        .recipe-author {
+            padding: 0 var(--spacing-gutter-medium);
+        }
+
+        .recipe-content {
+            padding: var(--spacing-gutter-medium);
+            padding-top: 2rem;
+        }
+
+        .recipe-author-item {
+            color: var(--color-gray-4);
+            margin-right: 1rem;
+        }
+
+        .recipe-author a {
+            color: var(--color-primary-dark);
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .recipe-author-item a:hover {
+            color: var(--color-primary);
+        }
+
+        .recipe-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+            background: var(--color-gray-1);
+        }
+
+        .recipe-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .recipe-meta-title {
+            font-size: 1.6rem;
+        }
+
+
+        .recipe-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            flex-flow: row nowrap;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 1.5rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe-footer a:hover {
+            filter: brightness(1.5);
         }
 
     </style>
