--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -8,11 +8,11 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Otávio Miranda
+            Matheus Sobreira
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
-            16/10/2021 às 11:21
+            23/06/2022 às 11:21
         </span>
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha/">
